--- a/style.css
+++ b/style.css
@@ -135,15 +135,16 @@ button{
     font-weight: 700;
 
 }
-.date, #condition{
+.date, #condition, .hour{
     color: red;
     font-size: 1.2rem;
     text-shadow: 1px 1px 2px black;
 
 }
 .date{
-    margin-bottom: 20px;
+    margin-bottom: 2px;
 }
+
 .wind-humidity > div > div{
     text-align: center;
     color: red;
