img do not uploaded

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     flex-wrap: wrap;
     justify-content:center;
     width: auto;
-    background:url(./pictures/desktop1.jpg);
+    background:url(./pictures/desktop1.png);
 
 }
 .header{
